Fix - banner break - white space showing below image

--- a/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
+++ b/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
@@ -65,7 +65,7 @@
 
 					.block:first-child {
 						width: 100/3 * 3%;
-						padding-bottom: 1em;
+						padding-bottom: 0.5em;
 					}
 
 				}
